做了一批字符串的题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,6 @@ add_executable(search-insert-position 35.search-insert-position.cpp)
 
 # 第66题：plus-one
 add_executable(plus-one 66.plus-one.cpp)
+
+
+add_executable(8 8.string-to-integer-atoi.cpp)
