--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 cmake-build-debug/
 .idea/
 *.bin
+.vscode/ipch/221048c040792d18/5.LONGEST-PALINDROMIC-SUBSTRING.ipch
+.vscode/ipch/f9fd2bc3923f1fca/14.LONGEST-COMMON-PREFIX.ipch
+.vscode/settings.json
+.vscode/settings.json
